[gd_scene load_steps=38 format=4 uid="uid://ccr7cy2xntb67"]

[ext_resource type="Script" path="res://world/world.gd" id="1_86tin"]
[ext_resource type="PackedScene" uid="uid://k8nbtwxisbbw" path="res://entities/player/player_ship.tscn" id="2_xskq6"]
[ext_resource type="Script" path="res://utilities/camera_controls.gd" id="3_iu3i8"]
[ext_resource type="Shader" path="res://shader/world/cloud_layer_lower.gdshader" id="4_2mmj8"]
[ext_resource type="Shader" path="res://shader/healthbar.gdshader" id="4_60ltu"]
[ext_resource type="Texture2D" uid="uid://7nknufbr1enf" path="res://icon_sq.svg" id="5_lx2ue"]
[ext_resource type="Script" path="res://ui/life_bar.gd" id="5_m5i0y"]
[ext_resource type="PackedScene" uid="uid://bin1yer8raw7m" path="res://world/solid_space_block.tscn" id="5_wiuku"]
[ext_resource type="Shader" path="res://shader/world/cloud_layer_upper.gdshader" id="6_uyhx7"]
[ext_resource type="PackedScene" uid="uid://sqxh81fs1uke" path="res://world/move_around_obstacle.tscn" id="7_ba6cw"]
[ext_resource type="Script" path="res://world/obstacle_pinger.gd" id="8_pcw6x"]
[ext_resource type="PackedScene" uid="uid://ccebawj0f0vlu" path="res://entities/enemy/basic_enemy_fighter.tscn" id="10_j7qj1"]
[ext_resource type="Texture2D" uid="uid://b8hko314t4sdj" path="res://data/assets/neon_purple_tileset.svg" id="10_s1abm"]
[ext_resource type="PackedScene" uid="uid://d16xo4klaujso" path="res://world/double_door.tscn" id="11_4ggu5"]
[ext_resource type="PackedScene" uid="uid://w5m2rs6uhks4" path="res://entities/enemy/basic_turret.tscn" id="11_46175"]
[ext_resource type="Script" path="res://world/projectile_manager.gd" id="11_s2wp7"]
[ext_resource type="PackedScene" uid="uid://4rcookby6rem" path="res://utilities/area_trigger.tscn" id="12_y2o1o"]
[ext_resource type="PackedScene" uid="uid://dvmfgq1jgicx8" path="res://entities/projectiles/bullet.tscn" id="14_075b3"]
[ext_resource type="Texture2D" uid="uid://dilu41cwm5suw" path="res://data/assets/ui/health_bottom.png" id="18_lk2it"]
[ext_resource type="Texture2D" uid="uid://vyoub7tpogus" path="res://data/assets/ui/health_top.png" id="19_xb1nn"]
[ext_resource type="Texture2D" uid="uid://dwb668525ppsa" path="res://data/assets/ui/health_progress.png" id="20_q0y2e"]
[ext_resource type="Texture2D" uid="uid://bfaa44ufcwrqu" path="res://data/assets/ui/shield_bottom.png" id="22_xl1s3"]
[ext_resource type="Texture2D" uid="uid://4oknt2ycgj84" path="res://data/assets/ui/shield_top.png" id="23_cksyo"]
[ext_resource type="Texture2D" uid="uid://betx0jexfklxm" path="res://data/assets/ui/shield_progress.png" id="24_rahc0"]
[ext_resource type="Script" path="res://ui/resource_bar.gd" id="25_g0y7s"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_q40wd"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_yagj8"]
seamless = true
noise = SubResource("FastNoiseLite_q40wd")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_6063v"]
offset = Vector3(50, 50, 0)
fractal_lacunarity = 2.62

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_4tk01"]
seamless = true
noise = SubResource("FastNoiseLite_6063v")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5ervw"]
shader = ExtResource("4_2mmj8")
shader_parameter/FUZZ = 0.007
shader_parameter/BLUE = Color(0.098, 0.47, 0.769, 1)
shader_parameter/RED = Color(1, 0.349, 0.369, 1)
shader_parameter/YELLOW = Color(1, 0.792, 0.227, 1)
shader_parameter/ORANGE = Color(1, 0.57, 0.298, 1)
shader_parameter/BRIGHT_ORANGE = Color(1, 0.937, 0.769, 1)
shader_parameter/YELLOW_WHITE = Color(0.333, 0.264, 0.075, 1)
shader_parameter/GREEN = Color(0.501, 0.788, 0.149, 1)
shader_parameter/PURPLE = Color(0.416, 0.298, 0.576, 1)
shader_parameter/PURPLE_BLACK = Color(0.0416, 0.0298, 0.0576, 1)
shader_parameter/scroll1 = Vector2(0.05, 0.05)
shader_parameter/scroll2 = Vector2(-0.05, 0.05)
shader_parameter/top_color = Color(1, 1, 1, 1)
shader_parameter/light_start = 0.516
shader_parameter/light_end = 0.808
shader_parameter/_noise1 = SubResource("NoiseTexture2D_yagj8")
shader_parameter/_noise2 = SubResource("NoiseTexture2D_4tk01")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ydseg"]
shader = ExtResource("6_uyhx7")
shader_parameter/FUZZ = 0.007
shader_parameter/BLUE = Color(0.098, 0.47, 0.769, 1)
shader_parameter/RED = Color(1, 0.349, 0.369, 1)
shader_parameter/YELLOW = Color(1, 0.792, 0.227, 1)
shader_parameter/ORANGE = Color(1, 0.57, 0.298, 1)
shader_parameter/BRIGHT_ORANGE = Color(1, 0.937, 0.769, 1)
shader_parameter/YELLOW_WHITE = Color(0.333, 0.264, 0.075, 1)
shader_parameter/GREEN = Color(0.501, 0.788, 0.149, 1)
shader_parameter/PURPLE = Color(0.416, 0.298, 0.576, 1)
shader_parameter/PURPLE_BLACK = Color(0.0416, 0.0298, 0.0576, 1)
shader_parameter/scroll1 = Vector2(0.01, 0.01)
shader_parameter/scroll2 = Vector2(-0.01, -0.01)
shader_parameter/top_color = Color(1, 1, 1, 1)
shader_parameter/light_start = 0.516
shader_parameter/light_end = 0.808
shader_parameter/_noise1 = SubResource("NoiseTexture2D_yagj8")
shader_parameter/_noise2 = SubResource("NoiseTexture2D_4tk01")

[sub_resource type="CircleShape2D" id="CircleShape2D_aoxw4"]
radius = 316.1

[sub_resource type="CircleShape2D" id="CircleShape2D_1evm4"]
radius = 639.02

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_08akb"]
texture = ExtResource("10_s1abm")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, -16, 16, 16, -16, 16)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, 16, -16, 16, -16, -16)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 16, -16, -16, 16, -16)

[sub_resource type="TileSet" id="TileSet_6cqnh"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 0
sources/2 = SubResource("TileSetAtlasSource_08akb")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hqf0b"]
shader = ExtResource("4_60ltu")
shader_parameter/FUZZ = 0.007
shader_parameter/BLUE = Color(0.098, 0.47, 0.769, 1)
shader_parameter/RED = Color(1, 0.349, 0.369, 1)
shader_parameter/YELLOW = Color(1, 0.792, 0.227, 1)
shader_parameter/ORANGE = Color(1, 0.57, 0.298, 1)
shader_parameter/BRIGHT_ORANGE = Color(1, 0.937, 0.769, 1)
shader_parameter/YELLOW_WHITE = Color(0.333, 0.264, 0.075, 1)
shader_parameter/GREEN = Color(0.501, 0.788, 0.149, 1)
shader_parameter/PURPLE = Color(0.416, 0.298, 0.576, 1)
shader_parameter/PURPLE_BLACK = Color(0.0416, 0.0298, 0.0576, 1)
shader_parameter/remaining = 0.8
shader_parameter/units = 5.0

[sub_resource type="CanvasTexture" id="CanvasTexture_5p41w"]

[node name="World" type="Node2D"]
script = ExtResource("1_86tin")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.1, 0.1)
motion_mirroring = Vector2(1920, 1080)

[node name="LowerCloudLayer" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
material = SubResource("ShaderMaterial_5ervw")
scale = Vector2(15, 8.438)
texture = ExtResource("5_lx2ue")
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.1, 0.1)
motion_mirroring = Vector2(1920, 1080)

[node name="UpperCloudLayer" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
material = SubResource("ShaderMaterial_ydseg")
position = Vector2(0, 3.8147e-06)
scale = Vector2(15.0705, 8.41269)
texture = ExtResource("5_lx2ue")
centered = false

[node name="Environment" type="Node" parent="."]

[node name="SolidSpaceBlock5" parent="Environment" instance=ExtResource("5_wiuku")]
position = Vector2(2265, -826)

[node name="SolidSpaceBlock6" parent="Environment" instance=ExtResource("5_wiuku")]
position = Vector2(4160, -826)

[node name="MoveAroundObstacle" parent="Environment" instance=ExtResource("7_ba6cw")]
position = Vector2(3216, -826)

[node name="Door" parent="Environment" node_paths=PackedStringArray("triggers") instance=ExtResource("11_4ggu5")]
position = Vector2(-592, 352)
triggers = [NodePath("AreaTrigger")]

[node name="AreaTrigger" parent="Environment/Door" instance=ExtResource("12_y2o1o")]
position = Vector2(208, -347)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Environment/Door/AreaTrigger"]
position = Vector2(-208, 340)
shape = SubResource("CircleShape2D_aoxw4")

[node name="Area2D" type="Area2D" parent="Environment"]
collision_layer = 0
collision_mask = 2
script = ExtResource("8_pcw6x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Environment/Area2D"]
position = Vector2(3216, -169)
shape = SubResource("CircleShape2D_1evm4")

[node name="NeonPurple" type="TileMapLayer" parent="Environment"]
tile_map_data = PackedByteArray("AADu//r/AgABAAMAAADv//r/AgABAAMAAADw//r/AgABAAMAAADx//r/AgABAAMAAADy//r/AgABAAMAAADz//r/AgABAAMAAAD0//r/AgABAAMAAAD1//r/AgABAAMAAAD2//r/AgABAAMAAAD3//r/AgABAAMAAAD4//r/AgABAAMAAAD5//r/AgABAAMAAAD6//r/AgABAAMAAAD7//r/AgABAAMAAAD8//r/AgABAAMAAAD9//r/AgABAAMAAAD+//r/AgABAAMAAAD///r/AgABAAMAAAAAAPr/AgABAAMAAAABAPr/AgABAAMAAAACAPr/AgABAAMAAAADAPr/AgABAAMAAAAEAPr/AgABAAMAAAAFAPr/AgABAAMAAAAGAPr/AgABAAMAAAAHAPr/AgABAAMAAAAIAPr/AgABAAMAAAAJAPr/AgABAAMAAAAKAPr/AgABAAMAAAALAPr/AgABAAMAAAAMAPr/AgABAAMAAAANAPr/AgABAAMAAAAOAPr/AgABAAMAAAAPAPr/AgABAAMAAAAQAPr/AgABAAMAAAARAPr/AgABAAMAAAASAPr/AgABAAMAAAATAPr/AgABAAMAAAAUAPr/AgABAAMAAAAVAPr/AgABAAMAAAAWAPr/AgABAAMAAAAXAPr/AgABAAMAAAAYAPr/AgABAAMAAAAZAPr/AgABAAMAAAAaAPr/AgABAAMAAAAbAPr/AgABAAMAAAAcAPr/AgABAAMAAAAdAPr/AgABAAMAAAAeAPr/AgABAAMAAAAfAPr/AgABAAMAAAAgAPr/AgABAAMAAAAhAPr/AgABAAMAAAAiAPr/AgABAAMAAAAjAPr/AgABAAMAAAAkAPr/AgABAAMAAAAlAPr/AgABAAMAAAAmAPr/AgABAAMAAAAnAPr/AgABAAMAAAAoAPr/AgABAAMAAAApAPr/AgABAAMAAAAqAPr/AgABAAMAAAArAPr/AgABAAMAAAAsAPr/AgABAAMAAAAtAPr/AgABAAMAAAAuAPr/AgABAAMAAAAvAPr/AgABAAMAAAAwAPr/AgABAAMAAAAxAPr/AgABAAMAAAAyAPr/AgABAAMAAAAzAPr/AgABAAMAAAA0APr/AgABAAMAAAA1APr/AgABAAMAAAA2APr/AgABAAMAAAA3APr/AgABAAMAAAA4APr/AgABAAMAAAA5APr/AgABAAMAAAA6APr/AgABAAMAAAA7APr/AgABAAMAAAA8APr/AgABAAMAAAA9APr/AgABAAMAAAA+APr/AgABAAMAAAA/APr/AgABAAMAAABAAPr/AgABAAMAAABBAPr/AgABAAMAAABCAPr/AgABAAMAAABDAPr/AgABAAMAAADu/zcAAgABAAMAAADv/zcAAgABAAMAAADw/zcAAgABAAMAAADx/zcAAgABAAMAAADy/zcAAgABAAMAAADz/zcAAgABAAMAAAD0/zcAAgABAAMAAAD1/zcAAgABAAMAAAD2/zcAAgABAAMAAAD3/zcAAgABAAMAAAD4/zcAAgABAAMAAAD5/zcAAgABAAMAAAD6/zcAAgABAAMAAAD7/zcAAgABAAMAAAD8/zcAAgABAAMAAAD9/zcAAgABAAMAAAD+/zcAAgABAAMAAAD//zcAAgABAAMAAAAAADcAAgABAAMAAAABADcAAgABAAMAAAACADcAAgABAAMAAAADADcAAgABAAMAAAAEADcAAgABAAMAAAAFADcAAgABAAMAAAAGADcAAgABAAMAAAAHADcAAgABAAMAAAAIADcAAgABAAMAAAAJADcAAgABAAMAAAAKADcAAgABAAMAAAALADcAAgABAAMAAAAMADcAAgABAAMAAAANADcAAgABAAMAAAAOADcAAgABAAMAAAAPADcAAgABAAMAAAAQADcAAgABAAMAAAARADcAAgABAAMAAAASADcAAgABAAMAAAATADcAAgABAAMAAAAUADcAAgABAAMAAAAVADcAAgABAAMAAAAWADcAAgABAAMAAAAXADcAAgABAAMAAAAYADcAAgABAAMAAAAZADcAAgABAAMAAAAaADcAAgABAAMAAAAbADcAAgABAAMAAAAcADcAAgABAAMAAAAdADcAAgABAAMAAAAeADcAAgABAAMAAAAfADcAAgABAAMAAAAgADcAAgABAAMAAAAhADcAAgABAAMAAAAiADcAAgABAAMAAAAjADcAAgABAAMAAAAkADcAAgABAAMAAAAlADcAAgABAAMAAAAmADcAAgABAAMAAAAnADcAAgABAAMAAAAoADcAAgABAAMAAAApADcAAgABAAMAAAAqADcAAgABAAMAAAArADcAAgABAAMAAAAsADcAAgABAAMAAAAtADcAAgABAAMAAAAuADcAAgABAAMAAAAvADcAAgABAAMAAAAwADcAAgABAAMAAAAxADcAAgABAAMAAAAyADcAAgABAAMAAAAzADcAAgABAAMAAAA0ADcAAgABAAMAAAA1ADcAAgABAAMAAAA2ADcAAgABAAMAAAA3ADcAAgABAAMAAAA4ADcAAgABAAMAAAA5ADcAAgABAAMAAAA6ADcAAgABAAMAAAA7ADcAAgABAAMAAAA8ADcAAgABAAMAAAA9ADcAAgABAAMAAAA+ADcAAgABAAMAAAA/ADcAAgABAAMAAABAADcAAgABAAMAAABBADcAAgABAAMAAABCADcAAgABAAMAAABDADcAAgABAAMAAADt/zYAAgADAAEAAADt/zUAAgADAAEAAADt/zQAAgADAAEAAADt/zMAAgADAAEAAADt/zIAAgADAAEAAADt/zEAAgADAAEAAADt/zAAAgADAAEAAADt/y8AAgADAAEAAADt/y4AAgADAAEAAADt/y0AAgADAAEAAADt/ywAAgADAAEAAADt/ysAAgADAAEAAADt/yoAAgADAAEAAADt/ykAAgADAAEAAADt/ygAAgADAAEAAADt/ycAAgADAAEAAADt/yYAAgADAAEAAADt/yUAAgADAAEAAADt/yQAAgADAAEAAADt/yMAAgADAAEAAADt//v/AgADAAEAAADt//z/AgADAAEAAADt//3/AgADAAEAAADt//7/AgADAAIAAADt////AgABAAAAAADt/wAAAgABAAEAAADt/wEAAgABAAEAAADt/wIAAgABAAEAAADt/wMAAgABAAEAAADt/wQAAgABAAEAAADt/wUAAgABAAEAAADt/w8AAgABAAIAADDt/xAAAgABAAEAADDt/xEAAgABAAEAADDt/xIAAgABAAEAADDt/xMAAgABAAEAADDt/xQAAgABAAEAADDt/xUAAgABAAEAADDt/xYAAgABAAAAADDt/xcAAgADAAIAADDt/xgAAgADAAEAAADt/xkAAgADAAEAAADt/xoAAgADAAEAAADt/xsAAgADAAEAAADt/xwAAgADAAEAAADt/x0AAgADAAEAAADt/x4AAgADAAEAAADt/x8AAgADAAEAAADt/yAAAgADAAEAAADt/yEAAgADAAEAAADt/yIAAgADAAEAAABEAPv/AgADAAEAAABEAPz/AgADAAEAAABEAP3/AgADAAEAAABEAP7/AgADAAEAAABEAP//AgADAAEAAABEAAAAAgADAAEAAABEAAEAAgADAAEAAABEAAIAAgADAAEAAABEAAMAAgADAAEAAABEAAQAAgADAAEAAABEAAUAAgADAAEAAABEAAYAAgADAAEAAABEAAcAAgADAAEAAABEAAgAAgADAAEAAABEAAkAAgADAAEAAABEAAoAAgADAAEAAABEAAsAAgADAAEAAABEAAwAAgADAAEAAABEAA0AAgADAAEAAABEAA4AAgADAAEAAABEAA8AAgADAAEAAABEABAAAgADAAEAAABEABEAAgADAAEAAABEABIAAgADAAEAAABEABMAAgADAAEAAABEABQAAgADAAEAAABEABUAAgADAAEAAABEABYAAgADAAEAAABEABcAAgADAAEAAABEABgAAgADAAEAAABEABkAAgADAAEAAABEABoAAgADAAEAAABEABsAAgADAAEAAABEABwAAgADAAEAAABEAB0AAgADAAEAAABEAB4AAgADAAEAAABEAB8AAgADAAEAAABEACAAAgADAAEAAABEACEAAgADAAEAAABEACIAAgADAAEAAABEACMAAgADAAEAAABEACQAAgADAAEAAABEACUAAgADAAEAAABEACYAAgADAAEAAABEACcAAgADAAEAAABEACgAAgADAAEAAABEACkAAgADAAEAAABEACoAAgADAAEAAABEACsAAgADAAEAAABEACwAAgADAAEAAABEAC0AAgADAAEAAABEAC4AAgADAAEAAABEAC8AAgADAAEAAABEADAAAgADAAEAAABEADEAAgADAAEAAABEADIAAgADAAEAAABEADMAAgADAAEAAABEADQAAgADAAEAAABEADUAAgADAAEAAABEADYAAgADAAEAAABEADcAAgADAAMAAABEAPr/AgADAAMAAADt//r/AgADAAMAAADt/zcAAgADAAMAAADs/wYAAgAAAAIAAADt/wYAAgABAAIAAADu/wYAAgACAAIAAADs/w8AAgACAAIAADDu/w8AAgAAAAIAADDs/wAAAgAAAAEAAADs/wEAAgAAAAEAAADs/wIAAgAAAAEAAADs/wMAAgAAAAEAAADs/wQAAgAAAAEAAADs/wUAAgAAAAEAAADu/wAAAgACAAEAAADu/wEAAgACAAEAAADu/wIAAgACAAEAAADu/wMAAgACAAEAAADu/wQAAgACAAEAAADs////AgAAAAAAAADu////AgACAAAAAADu/wUAAgACAAEAAADs//7/AgAEAAIAAADu//7/AgAFAAIAAADs/xcAAgAFAAIAADDs/xYAAgACAAAAADDs/xUAAgACAAEAADDs/xQAAgACAAEAADDs/xMAAgACAAEAADDs/xIAAgACAAEAADDs/xEAAgACAAEAADDs/xAAAgACAAEAADDu/xcAAgAEAAIAADDu/xYAAgAAAAAAADDu/xUAAgAAAAEAADDu/xQAAgAAAAEAADDu/xMAAgAAAAEAADDu/xIAAgAAAAEAADDu/xEAAgAAAAEAADDu/xAAAgAAAAEAADA=")
tile_set = SubResource("TileSet_6cqnh")

[node name="ProjectileManager" type="Node" parent="."]
script = ExtResource("11_s2wp7")

[node name="EnemyNest" type="Node" parent="."]

[node name="BasicEnemyFighter" parent="EnemyNest" instance=ExtResource("10_j7qj1")]
position = Vector2(1141, 386)

[node name="BasicTurret" parent="EnemyNest" instance=ExtResource("11_46175")]
position = Vector2(1274, 914)
projectile_scene = ExtResource("14_075b3")

[node name="PlayerShip" parent="." instance=ExtResource("2_xskq6")]
position = Vector2(348, 331)

[node name="Camera2D" type="Camera2D" parent="PlayerShip"]
script = ExtResource("3_iu3i8")
look_ahead_distance = 200.0
look_ahead_speed = 1.0

[node name="ShakeTimer" type="Timer" parent="PlayerShip/Camera2D"]
one_shot = true

[node name="HUD" type="CanvasLayer" parent="."]

[node name="LifeBar" type="TextureRect" parent="HUD"]
visible = false
light_mask = 0
material = SubResource("ShaderMaterial_hqf0b")
offset_left = 64.0
offset_top = 64.0
offset_right = 576.0
offset_bottom = 128.0
texture = SubResource("CanvasTexture_5p41w")
script = ExtResource("5_m5i0y")

[node name="HealthBar" type="TextureProgressBar" parent="HUD"]
offset_top = 24.0
offset_right = 128.0
offset_bottom = 536.0
value = 100.0
fill_mode = 2
texture_under = ExtResource("18_lk2it")
texture_over = ExtResource("19_xb1nn")
texture_progress = ExtResource("20_q0y2e")
texture_progress_offset = Vector2(30, 69)
script = ExtResource("25_g0y7s")

[node name="ShieldBar" type="TextureProgressBar" parent="HUD"]
offset_left = 51.0
offset_top = 24.0
offset_right = 179.0
offset_bottom = 536.0
value = 100.0
fill_mode = 2
texture_under = ExtResource("22_xl1s3")
texture_over = ExtResource("23_cksyo")
texture_progress = ExtResource("24_rahc0")
texture_progress_offset = Vector2(52.305, 68.355)
script = ExtResource("25_g0y7s")
